--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^0.14.0 || ^15.0.0-0"
   },
   "dependencies": {
-    "exenv": "^1.2.0"
+    "exenv": "^1.2.0",
+    "prop-types": "^15.5.10"
   }
 }
